--- a/screens/package.json
+++ b/screens/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@screens/account",
+    "name": "@screens/about-the-app-screen",
     "version": "1.0.0",
     "description": "",
     "private": true,
